@@ -1,3 +1,7 @@
+Fri Jul 13 00:50:40 2007  Tim Janik  <timj@imendio.com>
+
+	* glib/gthread.[hc]: fixed missing pointer casts when using atomic ops.
+
 2007-07-12  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
